fixed bug with slider overflow

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -49,9 +49,15 @@ body {
 
 .slick-slider {
   position: static;
+
+}
+.steps__slider{
+
 }
 
-.slick-track {}
+.slick-track {
+
+}
 
 .slick-list {
   overflow: visible !important;
